	cvs-clean

2006-04-03  Erlend Aasland  <erlenda@gmail.com>

	* input/regression/hairpin-circled.ly: new file

2006-04-03  Erlend Aasland  <erlenda@gmail.com>

	* lily/hairpin.cc (print): add support for circled tip

	* scm/define-grob-properties.scm: add circled-tip parameter

	* scm/define-grobs.scm: init circled-tip to false
	
2006-04-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/music-functions.scm (quote-substitute): set iterators-ctor. Backportme.

2006-03-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/bibliography/GNUmakefile ($(outdir)/%.html): set
	BSTINPUTS. 

	* Documentation/topdocs/AUTHORS.texi (Top): add David Feuer.

	* scm/output-ps.scm (glyph-string): revert cid selectfont.

2006-03-31  David Feuer  <david.feuer@gmail.com>
	
	* scm/framework-ps.scm:
	
	* scm/output-ps.scm: glyph-string now produces smaller, more
	readable, and probably faster PostScript.  Several findfont
	scalefont setfont instances changed to selectfont
	Hacked-up string-appends changed to formats.

	* ps/music-drawing-routines.ps: add print_letter, print_glyphs.
	
2006-03-30  Graham Percival  <gpermus@gmail.com>

	* scm/lily-library.scm: make "no version" warning message more polite.

	* lily/music.cc: add double quotes to failed octave check.

	* Documentation/user/ advanced-notation, changing-defaults,
	instrument-notation, invoking, music-glossary: whole bunch of minor
	fixes from mailist.

2006-03-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/bibliography/GNUmakefile ($(outdir)/%.html): use
	$(buildscriptdir) iso. depth.

	* VERSION (PACKAGE_NAME): release 2.9.1

2006-03-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/pango-font.cc (pango_item_string_stencil): more robustness.

	* VERSION (PATCH_LEVEL): bump version number.

	* flower/include/guile-compatibility.hh (scm_from_uint32): add
	scm_from_uint32 ()

	* lily/pango-font.cc (pango_item_string_stencil): use
	scm_from_uint32 ()

	* mf/GNUmakefile ($(outdir)/emmentaler-%.otf