@@ -14,6 +14,7 @@ CONTRIBUTORS
 
 David Feuer
 Joe Neeman
+Erlend Aasland
 
 SPONSORS
 
