@@ -45,7 +45,8 @@
 	
 2006-04-03  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
-	* scm/music-functions.scm (quote-substitute): set iterators-ctor. Backportme.
+	* scm/music-functions.scm (quote-substitute): set
+	iterators-ctor. Backportme.
 
 2006-03-31  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
